style(about): fix letter-spacing and font of callout sections

--- a/src/pages/about-empire.module.less
+++ b/src/pages/about-empire.module.less
@@ -28,7 +28,8 @@
     width: 1200px;
     margin: 36px auto;
     color: #5D6482;
-    font-family: "libre franklin regular";
+    font-family: 'libre franklin light';
+    letter-spacing: .5px;
     font-size: 36px;
     line-height: 48px;
     display: block;
